creat branch dev-footer-sociallink

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
   </head>
   <body>
     <!-- branch Axel -->
-    <i class="fa-brands fa-facebook-f"></i>
-    <button type="button" id="dark-mode">click me</button>
+
+    <button type="button" id="dark-mode">
+      <i id="moon" class="fa-brands fa-facebook-f"></i>
+    </button>
     <button type="button" id="blue-mode">blue-mode</button>
 
     <h1 class="flex justify-center text-5xl pb-20">
@@ -25,7 +27,11 @@
       molestiae. Quaerat rem consectetur atque, ducimus alias beatae mollitia
       odio culpa.
     </p>
-    <a href="http://localhost:8081/contact.html">CONTACT</a>
-    <a href="http://localhost:8081/services.html">SERVICES</a>
+    <a href="http://localhost:3000/contact.html">CONTACT</a>
+    <a href="http://localhost:3000/services.html">SERVICES</a>
+    <img src="./img/img-test-webpack.jpg" alt="" />
+    <div id="profil1">
+      <h1></h1>
+    </div>
   </body>
 </html>
