--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -17,7 +17,8 @@
       Lorem ipsum dolor sit amet consectetur adipisicing elit
     </h1>
 
-   <p>lorem</p>
+    <p>lorem</p>
+    <img src="./assets/img/img-test-webpack.jpg" alt="" />
     <a href="http://localhost:8081/contact.html">CONTACT</a>
     <a href="http://localhost:8081/services.html">SERVICES</a>
   </body>
