--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,28 @@
   <link href="/output.css" rel="stylesheet">
 </head>
 <body>
+  <header class=" ">
+    <img src="./assets/img/casque-rose-rouge.jpg" class="z-10 absolute ">
+    <div class=" mr-10 text-end">
+
+      <div class=" ">
+        <h1>
+          hello wana-171
+        </h1>
   
+        <i class="fa-solid fa-moon"></i>
+        <button type="button" id="dark-mode">
+          dark mode
+        </button>
+      </div>
+      <nav>
+        <ul>
+          <li>
+  
+            <a a href="localhost:8080/contact/index.html" target="_blank" >contact</a>
+            <a href="localhost:8080/services/index.html" target="_blank">services</a>
+          </li>
+        </ul>
+      </nav>
 </body>
 </html>
