--- a/src/index.html
+++ b/src/index.html
@@ -8,28 +8,41 @@
   <link href="/output.css" rel="stylesheet">
 </head>
 <body>
-  <header class=" ">
-    <img src="./assets/img/casque-rose-rouge.jpg" class="z-10 absolute ">
-    <div class=" mr-10 text-end">
+  <header class="bg-img-background h-96 bg-neutral-50 ">
+    <div> 
+    <img src="./assets/img/casque-rose-rouge2.jpg" class="">
+  </div>
+    <div class="">
 
-      <div class=" ">
-        <h1>
-          hello wana-171
+      <img src="./assets/img/logo-wana-agency-web-rougeblanc.jpg" alt="logo wana" class="w-1-5  top-3 left-1  absolute">
+    </div>
+    <div class=" text-end bg-pink-900 h-60">
+
+      <div class=" text-pink-400 text-end">
+        <h1 class="text-center text-5xl ">
+          WANA AGENCY
         </h1>
-  
-        <i class="fa-solid fa-moon"></i>
-        <button type="button" id="dark-mode">
-          dark mode
-        </button>
+  <div class="mr-32">
+<div class="mr-28">
+
+  <i class="fa-solid fa-moon"></i>
+  <button type="button" id="dark-mode mr-10">
+    dark mode
+  </button>
+</div>
+    <nav>
+      <ul>
+        <li>
+          <a a href="localhost:8080/contact/index.html" class="mr-10" ping="post" target="_blank" >contact</a>
+          <a href="localhost:8080/services/index.html" class="mr-10" ping="post" target="_blank">services</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
       </div>
-      <nav>
-        <ul>
-          <li>
-  
-            <a a href="localhost:8080/contact/index.html" target="_blank" >contact</a>
-            <a href="localhost:8080/services/index.html" target="_blank">services</a>
-          </li>
-        </ul>
-      </nav>
+      <h2>
+
+      </h2>
+       </header>
 </body>
 </html>
