--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -7,59 +7,71 @@
   <title>Document</title>
   <link href="/output.css" rel="stylesheet">
 </head>
-<body>
-  <header class="bg-img-background h-96 bg-neutral-50 ">
+<body class="h-full">
+  <header class=" h-96 bg-neutral-50 ">
     <div> 
-    <img src="./assets/img/casque-rose-rouge2.jpg" class="">
+    <img src="./assets/img/casque-rose-rouge2.jpg" class="object-cover ">
   </div>
     <div class="">
 
       <img src="./assets/img/logo-wana-agency-web-rougeblanc.jpg" alt="logo wana" class="w-1-5  top-0 left-1  fixed z-10">
     </div>
-    <div class=" text-end bg-pink-900 h-40 fixed bottom-96 w-full">
-
-      <div class=" text-pink-400 text-end">
-        <h1 class="text-center text-5xl ">
+    <div class=" text-end h-40 fixed bottom-96 w-full ">
+      <div class=" text-white text-end">
+        <!-- <h1 class="text-center text-5xl ">
           WANA AGENCY
-        </h1>
-  <div class="mr-32">
+        </h1> -->
+  <div class="mr-96">
 <div class="mr-28">
 
-  <i class="fa-solid fa-moon"></i>
-  <button type="button" id="dark-mode mr-10">
+</div>
+<div class="">
+  
+  <button type="button" id="dark-mode mr-10 ">
+    <i class="fa-solid fa-moon text" ></i>
     dark mode
   </button>
-</div>
-    <nav class="">
+  <nav >
+   <div>
+    <nav>
       <ul>
         <li>
-          <a a href="localhost:8080/contact/index.html" class="mr-10" ping="post" target="_blank" >contact</a>
+            <a a href="localhost:8080/contact/index.html" class="mr-10" ping="post" target="_blank" >contact</a>
+            <a href="localhost:8080/services/index.html" class="mr-10" ping="post" target="_blank">services</a>
+        
         </li>
-        <li>
-            <a href=""></a>
-        </li>
-
-          <li>
-
-              <a href="localhost:8080/services/index.html" class="mr-10" ping="post" target="_blank">services</a>
-          </li>
       </ul>
     </nav>
-  </div>
-      </div>
-      </div>
-      <div class="absolute top-56  text-white ml-1 ">
+   </div>
+    
+  </nav>
+</div>
+    </div>
+    </div>
+    <div class="absolute top-56  text-white ml-1 ">
 
-          <h2 class="text-start  ">
-    Bienvenue sur notre site de streaming
-          </h2>
-          <br>
-          <hr>
-          <br>
-          <p class="text-start">
-              Sur notre site nous vous proposons d'écouter de la musique <br> et de visionner vos clip préférers sans limite.
-          </p>
-      </div>
+        <h2 class="text-start  ">
+  Bienvenue sur notre site de streaming
+        </h2>
+        <br>
+        <hr>
+        <br>
+        <p class="text-start">
+            Sur notre site nous vous proposons d'écouter de la musique <br> et de visionner vos clip préférers sans limite.
+        </p>
+    </div>
+</div>
        </header>
+
+
+<section>
+
+  <div >
+
+    <h2>
+      A écouter des maintenant
+    </h2>
+  </div>
+</section>
 </body>
 </html>
