--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -6,9 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="bg-gradient-to-r from-red-500 to-pink-400 animate-gradient h-screen">
     <h1>
-        services
+
     </h1>
+    <section class="bg-pink-400  ">
+        <h2>
+            ABONNEMENT 1 MOIS 
+        </h2>
+        <P>
+            Dans cette abonnement vous aurait accés a une écoute ilimiter,sans aucune pub et vous pourrais télécharger vos musique <br> mais avec une limite de télécharger de 4 musiques par heures
+        </P>
+        <button class="bg-white rounded-xl  text-pink-400 hover:bg-pink-400 hover:after:text-white">
+            payer
+        </button>
+
+    </section >
+    
+    <section class="bg-pink-400">
+            <h2 class="text-white">
+            ABONNEMENT PREMIUM 
+            </h2>
+            <p class="text-white" >
+                Dans cette abonnement vous aurait les plus d'avantage comme télécharger vos musiques avec aucune limites <br> sans vous préocupper de nombre de vos musique que vous télécharger 
+            </p>
+            <button class="bg-white rounded-xl text-pink-400  hover:bg-pink-400 hover:after:text-white">
+                payer
+            </button>
+            
+    </section>
+
 </body>
 </html>
