push finaly end : footer homepage DONE

--- a/src/assets/pages/home/index.html
+++ b/src/assets/pages/home/index.html
@@ -23,11 +23,177 @@
     <a href="http://localhost:8081/services.html">SERVICES</a>
 
     <!-- *************************************************** -->
-    <!-- ******************* Footer ************************ -->
+    <!-- *************** Footer Mobile  ******************** -->
     <!-- *************************************************** -->
 
-    <footer>
-      <div class="grid grid-rows-3">
+    <!-- nav 1 -->
+
+    <footer class="bg-pink-400">
+      <div class="md:hidden">
+        <div class="grid grid-rows-3">
+          <div class="flex justify-center items-center">
+            <nav>
+              <ul>
+                <h1 class="text-xl font-bold py-4">Nous découvrir</h1>
+
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">Qui somme nous</a>
+                </li>
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">A propos d'Agency Wana</a>
+                </li>
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">Nos services proposés</a>
+                </li>
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">Nous contacté</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <!-- nav 2 -->
+
+          <div class="flex items-center justify-center">
+            <nav class="list-none">
+              <ul>
+                <h1 class="font-bold text-xl py-4">Coin musique</h1>
+
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#"> Streaming à la demande</a>
+                </li>
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">Téléchargement musique</a>
+                </li>
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">Top musique</a>
+                </li>
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">Partenariat</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <!-- nav 3 -->
+
+          <div class="flex items-center justify-center">
+            <nav>
+              <ul>
+                <h1 class="text-xl font-bold py-4">Politique RGPD</h1>
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">Conditions d'utilisation</a>
+                </li>
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">Politique de confidentialité</a>
+                </li>
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">Mentions légales</a>
+                </li>
+                <li class="pb-2 hover:border-b-4 hover:border-b-black">
+                  <a href="#">Accésibilité</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <!-- API application -->
+        <div class="grid grid-cols-2">
+          <h1
+            class="col-span-2 flex justify-center items-end text-xl font-bold py-10"
+          >
+            Télécharger notre application
+          </h1>
+          <div class="flex justify-center items-center">
+            <button class="border-4 border-black w-28 h-28 hover:text-white">
+              <i class="text-5xl fa-brands fa-android"></i>
+              <span class="flex justify-center text-xl">Play-Store</span>
+            </button>
+          </div>
+
+          <div class="flex justify-center items-center">
+            <button class="border-4 border-black w-28 h-28 hover:text-white">
+              <i class="text-6xl fa-brands fa-apple"></i>
+              <span class="flex justify-center text-xl"> IOS-Store </span>
+            </button>
+          </div>
+        </div>
+
+        <!-- logo -->
+        <div class="grid grid-cols-2">
+          <div class="flex justify-center items-center py-10">
+            <a href="">
+              <img
+                src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+                width="150px"
+                alt="logo-agency"
+              />
+            </a>
+          </div>
+
+          <!--********** SOCIAL LINK ********** -->
+          <div class="text-5xl text-center py-10">
+            <div>
+              <a href="#"
+                ><i class="fa-brands fa-linkedin hover:text-white"></i
+              ></a>
+              <a href="#"
+                ><i class="fa-brands fa-square-github hover:text-white"></i
+              ></a>
+            </div>
+            <a href="#"
+              ><i class="fa-brands fa-square-instagram hover:text-white"></i
+            ></a>
+            <a href="#"
+              ><i class="fa-brands fa-square-twitter hover:text-white"></i
+            ></a>
+          </div>
+          <h1><i class="fa-regular fa-copyright"></i>Wana Agency</h1>
+        </div>
+      </div>
+    </footer>
+
+    <!-- *************** Footer ************** -->
+    <!-- ********** Tablet & Desktop ******** -->
+    <!-- logo  -->
+
+    <footer
+      class="h-80 w-full bg-pink-400 hidden md:block lg:block bottom-0 absolute"
+    >
+      <div class="grid grid-cols-5">
+        <div class="grid grid-rows-1 md:mx-4">
+          <div class="flex justify-center items-center md:py-4">
+            <a href="">
+              <img
+                src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+                width="150px"
+                alt="logo-agency"
+              />
+            </a>
+          </div>
+
+          <!--********** SOCIAL LINK ********** -->
+          <div class="text-5xl text-center pb-10">
+            <div>
+              <a href="#"
+                ><i class="fa-brands fa-linkedin hover:text-white"></i
+              ></a>
+              <a href="#"
+                ><i class="fa-brands fa-square-github hover:text-white"></i
+              ></a>
+            </div>
+            <a href="#"
+              ><i class="fa-brands fa-square-instagram hover:text-white"></i
+            ></a>
+            <a href="#"
+              ><i class="fa-brands fa-square-twitter hover:text-white"></i
+            ></a>
+          </div>
+          <h1><i class="fa-regular fa-copyright"></i>Wana Agency</h1>
+        </div>
+
+        <!-- navbar footer 1 -->
         <div class="flex items-center">
           <nav>
             <ul>
@@ -49,6 +215,7 @@
           </nav>
         </div>
 
+        <!-- navbar footer 2 -->
         <div class="flex items-center">
           <nav class="list-none">
             <ul>
@@ -70,6 +237,7 @@
           </nav>
         </div>
 
+        <!-- navbar footer 3 -->
         <div class="flex items-center">
           <nav>
             <ul>
@@ -89,116 +257,26 @@
             </ul>
           </nav>
         </div>
-      </div>
-    </footer>
-
-    <!-- logo  -->
-
-    <footer class="h-80 w-full bg-pink-400 grid grid-cols-5 absolute bottom-0">
-      <div class="grid grid-rows-1">
-        <div class="flex justify-center items-center">
-          <a href="">
-            <img
-              src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
-              width="150px"
-              alt="logo-agency"
-            />
-          </a>
-        </div>
-
-        <!--********** SOCIAL LINK ********** -->
-        <div class="text-5xl text-center pb-10">
-          <div>
-            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-square-github"></i></a>
+        <!-- API APPLICATION -->
+        <div class="grid grid-cols-2">
+          <h1
+            class="col-span-2 flex justify-center items-end text-xl font-bold md:pl-6"
+          >
+            Télécharger notre application
+          </h1>
+          <div class="flex justify-center items-center px-2">
+            <button class="border-2 border-black w-28 h-28 hover:text-white">
+              <i class="text-5xl fa-brands fa-android"></i>
+              <span class="flex justify-center text-sm">Play-Store</span>
+            </button>
           </div>
-          <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-          <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-        </div>
-        <h1><i class="fa-regular fa-copyright"></i>Wana Agency</h1>
-      </div>
 
-      <!-- navbar footer 1 -->
-      <div class="flex items-center">
-        <nav>
-          <ul>
-            <h1 class="text-xl font-bold pb-4">Nous découvrir</h1>
-
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">Qui somme nous</a>
-            </li>
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">A propos d'Agency Wana</a>
-            </li>
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">Nos services proposés</a>
-            </li>
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">Nous contacté</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-
-      <!-- navbar footer 2 -->
-      <div class="flex items-center">
-        <nav class="list-none">
-          <ul>
-            <h1 class="font-bold text-xl pb-4">Coin musique</h1>
-
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#"> Streaming à la demande</a>
-            </li>
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">Téléchargement musique</a>
-            </li>
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">Top musique</a>
-            </li>
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">Partenariat</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-
-      <!-- navbar footer 3 -->
-      <div class="flex items-center">
-        <nav>
-          <ul>
-            <h1 class="text-xl font-bold pb-4">Politique RGPD</h1>
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">Conditions d'utilisation</a>
-            </li>
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">Politique de confidentialité</a>
-            </li>
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">Mentions légales</a>
-            </li>
-            <li class="pb-2 hover:border-b-4 hover:border-b-black">
-              <a href="#">Accésibilité</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <!-- API APPLICATION -->
-      <div class="grid grid-cols-2">
-        <h1 class="col-span-2 flex justify-center items-end text-xl font-bold">
-          Télécharger notre application
-        </h1>
-        <div class="flex justify-center items-center">
-          <button class="border-4 border-black w-28 h-28">
-            <i class="text-5xl fa-brands fa-android"></i>
-            <span class="flex justify-center text-xl">Play-Store</span>
-          </button>
-        </div>
-
-        <div class="flex justify-center items-center">
-          <button class="border-4 border-black w-28 h-28">
-            <i class="text-6xl fa-brands fa-apple"></i>
-            <span class="flex justify-center text-xl"> IOS-Store </span>
-          </button>
+          <div class="flex justify-center items-center px-2">
+            <button class="border-2 border-black w-28 h-28 hover:text-white">
+              <i class="text-6xl fa-brands fa-apple"></i>
+              <span class="flex justify-center text-sm"> IOS-Store </span>
+            </button>
+          </div>
         </div>
       </div>
     </footer>
