--- a/src/assets/pages/home/index.html
+++ b/src/assets/pages/home/index.html
@@ -8,277 +8,119 @@
     <link href="/output.css" rel="stylesheet" />
   </head>
   <body>
-    <!-- branch Axel -->
-    <i class="fa-brands fa-facebook-f"></i>
-    <button type="button" id="dark-mode">click me</button>
-    <button type="button" id="blue-mode">blue-mode</button>
+    <!-- nav mod desktop -->
 
-    <h1 class="flex justify-center text-5xl pb-20">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit
-    </h1>
-
-    <p>lorem</p>
-
-    <a href="http://localhost:8081/contact.html">CONTACT</a>
-    <a href="http://localhost:8081/services.html">SERVICES</a>
-
-    <!-- *************************************************** -->
-    <!-- *************** Footer Mobile  ******************** -->
-    <!-- *************************************************** -->
-
-    <!-- nav 1 -->
-
-    <footer class="bg-pink-400">
-      <div class="md:hidden">
-        <div class="grid grid-rows-3">
-          <div class="flex justify-center items-center">
-            <nav>
-              <ul>
-                <h1 class="text-xl font-bold py-4">Nous découvrir</h1>
-
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">Qui somme nous</a>
-                </li>
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">A propos d'Agency Wana</a>
-                </li>
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">Nos services proposés</a>
-                </li>
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">Nous contacté</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-
-          <!-- nav 2 -->
-
-          <div class="flex items-center justify-center">
-            <nav class="list-none">
-              <ul>
-                <h1 class="font-bold text-xl py-4">Coin musique</h1>
-
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#"> Streaming à la demande</a>
-                </li>
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">Téléchargement musique</a>
-                </li>
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">Top musique</a>
-                </li>
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">Partenariat</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-
-          <!-- nav 3 -->
-
-          <div class="flex items-center justify-center">
-            <nav>
-              <ul>
-                <h1 class="text-xl font-bold py-4">Politique RGPD</h1>
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">Conditions d'utilisation</a>
-                </li>
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">Politique de confidentialité</a>
-                </li>
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">Mentions légales</a>
-                </li>
-                <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                  <a href="#">Accésibilité</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+    <header class="hidden lg:block">
+      <div class="grid grid-cols-8 bg-pink-400">
+        <div class="flex justify-center">
+          <img
+            class="py-4"
+            src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+            width="120px"
+            height="auto"
+            alt=""
+          />
         </div>
+        <button type="button" id="btn-dark-mode1">
+          <i class="fa-solid fa-moon text-6xl"></i>
+        </button>
 
-        <!-- API application -->
-        <div class="grid grid-cols-2">
-          <h1
-            class="col-span-2 flex justify-center items-end text-xl font-bold py-10"
-          >
-            Télécharger notre application
-          </h1>
-          <div class="flex justify-center items-center">
-            <button class="border-4 border-black w-28 h-28 hover:text-white">
-              <i class="text-5xl fa-brands fa-android"></i>
-              <span class="flex justify-center text-xl">Play-Store</span>
-            </button>
-          </div>
-
-          <div class="flex justify-center items-center">
-            <button class="border-4 border-black w-28 h-28 hover:text-white">
-              <i class="text-6xl fa-brands fa-apple"></i>
-              <span class="flex justify-center text-xl"> IOS-Store </span>
-            </button>
-          </div>
-        </div>
-
-        <!-- logo -->
-        <div class="grid grid-cols-2">
-          <div class="flex justify-center items-center py-10">
-            <a href="">
-              <img
-                src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
-                width="150px"
-                alt="logo-agency"
-              />
-            </a>
-          </div>
-
-          <!--********** SOCIAL LINK ********** -->
-          <div class="text-5xl text-center py-10">
-            <div>
-              <a href="#"
-                ><i class="fa-brands fa-linkedin hover:text-white"></i
-              ></a>
-              <a href="#"
-                ><i class="fa-brands fa-square-github hover:text-white"></i
-              ></a>
-            </div>
-            <a href="#"
-              ><i class="fa-brands fa-square-instagram hover:text-white"></i
-            ></a>
-            <a href="#"
-              ><i class="fa-brands fa-square-twitter hover:text-white"></i
-            ></a>
-          </div>
-          <h1><i class="fa-regular fa-copyright"></i>Wana Agency</h1>
+        <div class="col-span-6 flex justify-center items-center">
+          <nav class="text-3xl">
+            <ul class="flex">
+              <li>
+                <a class="hover:border-b-4 hover:border-black" href="#"
+                  >Accueil</a
+                >
+              </li>
+              <li class="px-8">
+                <a class="hover:border-b-4 hover:border-black" href="#"
+                  >Streaming</a
+                >
+              </li>
+              <li class="pr-8">
+                <a class="hover:border-b-4 hover:border-black" href="#"
+                  >Services</a
+                >
+              </li>
+              <li class="pr-8">
+                <a class="hover:border-b-4 hover:border-black" href="#"
+                  >Boutique</a
+                >
+              </li>
+              <li>
+                <a class="hover:border-b-4 hover:border-black" href="#"
+                  >Contact</a
+                >
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
-    </footer>
+    </header>
 
-    <!-- *************** Footer ************** -->
-    <!-- ********** Tablet & Desktop ******** -->
-    <!-- logo  -->
+    <!-- mod tablet & mobile -->
 
-    <footer
-      class="h-80 w-full bg-pink-400 hidden md:block lg:block bottom-0 absolute"
-    >
-      <div class="grid grid-cols-5">
-        <div class="grid grid-rows-1 md:mx-4">
-          <div class="flex justify-center items-center md:py-4">
-            <a href="">
-              <img
-                src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
-                width="150px"
-                alt="logo-agency"
-              />
-            </a>
-          </div>
-
-          <!--********** SOCIAL LINK ********** -->
-          <div class="text-5xl text-center pb-10">
-            <div>
-              <a href="#"
-                ><i class="fa-brands fa-linkedin hover:text-white"></i
-              ></a>
-              <a href="#"
-                ><i class="fa-brands fa-square-github hover:text-white"></i
-              ></a>
-            </div>
-            <a href="#"
-              ><i class="fa-brands fa-square-instagram hover:text-white"></i
-            ></a>
-            <a href="#"
-              ><i class="fa-brands fa-square-twitter hover:text-white"></i
-            ></a>
-          </div>
-          <h1><i class="fa-regular fa-copyright"></i>Wana Agency</h1>
+    <header class="lg:hidden">
+      <div class="grid grid-cols-3">
+        <!-- btn menu burger -->
+        <div class="flex items-center pl-6">
+          <button type="button" id="btn-home-burger">
+            <i class="fa-solid fa-burger text-6xl"></i>
+          </button>
         </div>
 
-        <!-- navbar footer 1 -->
-        <div class="flex items-center">
-          <nav>
-            <ul>
-              <h1 class="text-xl font-bold pb-4">Nous découvrir</h1>
-
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">Qui somme nous</a>
-              </li>
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">A propos d'Agency Wana</a>
-              </li>
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">Nos services proposés</a>
-              </li>
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">Nous contacté</a>
-              </li>
-            </ul>
-          </nav>
+        <div class="flex justify-center py-2">
+          <img
+            src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+            width="120px"
+            height="auto"
+            alt=""
+          />
         </div>
 
-        <!-- navbar footer 2 -->
-        <div class="flex items-center">
-          <nav class="list-none">
-            <ul>
-              <h1 class="font-bold text-xl pb-4">Coin musique</h1>
-
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#"> Streaming à la demande</a>
-              </li>
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">Téléchargement musique</a>
-              </li>
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">Top musique</a>
-              </li>
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">Partenariat</a>
-              </li>
-            </ul>
-          </nav>
+        <div class="flex justify-end items-center pr-6">
+          <button type="button" id="btn-dark-mode2">
+            <i class="fa-solid fa-moon text-6xl"></i>
+          </button>
         </div>
 
-        <!-- navbar footer 3 -->
-        <div class="flex items-center">
-          <nav>
-            <ul>
-              <h1 class="text-xl font-bold pb-4">Politique RGPD</h1>
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">Conditions d'utilisation</a>
-              </li>
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">Politique de confidentialité</a>
-              </li>
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">Mentions légales</a>
-              </li>
-              <li class="pb-2 hover:border-b-4 hover:border-b-black">
-                <a href="#">Accésibilité</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <!-- API APPLICATION -->
-        <div class="grid grid-cols-2">
-          <h1
-            class="col-span-2 flex justify-center items-end text-xl font-bold md:pl-6"
-          >
-            Télécharger notre application
-          </h1>
-          <div class="flex justify-center items-center px-2">
-            <button class="border-2 border-black w-28 h-28 hover:text-white">
-              <i class="text-5xl fa-brands fa-android"></i>
-              <span class="flex justify-center text-sm">Play-Store</span>
-            </button>
-          </div>
-
-          <div class="flex justify-center items-center px-2">
-            <button class="border-2 border-black w-28 h-28 hover:text-white">
-              <i class="text-6xl fa-brands fa-apple"></i>
-              <span class="flex justify-center text-sm"> IOS-Store </span>
-            </button>
-          </div>
-        </div>
+        <!-- menu burger -->
       </div>
-    </footer>
+      <div>
+        <nav
+          class="bg-pink-400 h-60 text-center flex justify-center items-center text-2xl"
+          id="menu-home-nav"
+        >
+          <ul>
+            <li>
+              <a class="hover:border-b-4 hover:border-black" href="#"
+                >Accueil</a
+              >
+            </li>
+            <li class="pt-4">
+              <a class="hover:border-b-4 hover:border-black" href="#"
+                >Streaming</a
+              >
+            </li>
+            <li class="pt-4">
+              <a class="hover:border-b-4 hover:border-black" href="#"
+                >Services</a
+              >
+            </li>
+            <li class="pt-4">
+              <a class="hover:border-b-4 hover:border-black" href="#"
+                >Boutique</a
+              >
+            </li>
+            <li class="pt-4">
+              <a class="hover:border-b-4 hover:border-black" href="#"
+                >Contact</a
+              >
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
