--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="/output.css" rel="stylesheet">
-</head>
+  <link href="/dist/output.css" rel="stylesheet">
+<script defer src="/assets/runtime.bundle.js"></script><script defer src="/assets/main.bundle.js"></script></head>
 <body>
-  
+
+  <div>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quasi totam accusantium! Dolorum iure modi, est, perspiciatis nam id suscipit veniam consequatur fuga cum voluptatem, tempore fugiat eligendi facilis tempora?</p>
+  </div>
+  <div>
+  <div class="flex-1">
+    <img class="bg-origin-border p-4 border-4 border-dashed ..." src="../../assets/img/casque-tel.jpg"  alt="logo" width="250px" height="auto">
+  </div>
+  <div class="flex-1">
+    <img class="bg-origin-padding p-4 border-4 border-dashed ..." src="../../assets/img/dj.jpg"  alt="logo" width="250px" height="auto">
+  </div>
+  <div class="flex-1">
+    <img class="bg-origin-content p-4 border-4 border-dashed ..." src="../../assets/img/vinile.jpg"  alt="logo" width="20px" height="auto">
+  </div>
+</div>
 </body>
 </html>
