page contact done, finaly push

--- a/src/assets/pages/home/index.html
+++ b/src/assets/pages/home/index.html
@@ -7,19 +7,20 @@
     <title>Document</title>
     <link href="/output.css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="bg-pink-100">
     <!-- nav mod desktop -->
 
     <header class="hidden lg:block">
       <div class="grid grid-cols-8 bg-pink-400">
         <div class="flex justify-center">
+          <a href="http://localhost:8080/">
           <img
             class="py-4"
             src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
             width="120px"
             height="auto"
             alt=""
-          />
+          /></a>
         </div>
         <button type="button" id="btn-dark-mode1">
           <i class="fa-solid fa-moon text-6xl"></i>
@@ -49,7 +50,9 @@
                 >
               </li>
               <li>
-                <a class="hover:border-b-4 hover:border-black" href="#"
+                <a
+                  class="hover:border-b-4 hover:border-black"
+                  href="http://localhost:8080/contact.html"
                   >Contact</a
                 >
               </li>
@@ -71,12 +74,14 @@
         </div>
 
         <div class="flex justify-center py-2">
+         <a href="http://localhost:8080/">
           <img
+            class="py-4"
             src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
             width="120px"
             height="auto"
             alt=""
-          />
+          /></a>
         </div>
 
         <div class="flex justify-end items-center pr-6">
@@ -89,12 +94,12 @@
       </div>
       <div>
         <nav
-          class="bg-pink-400 h-60 text-center flex justify-center items-center text-2xl"
+          class="bg-pink-400 h-60 text-center flex justify-center items-center text-2xl hidden"
           id="menu-home-nav"
         >
           <ul>
             <li>
-              <a class="hover:border-b-4 hover:border-black" href="#"
+              <a class="hover:border-b-4 hover:border-black" href="http://localhost:8080/"
                 >Accueil</a
               >
             </li>
@@ -114,7 +119,9 @@
               >
             </li>
             <li class="pt-4">
-              <a class="hover:border-b-4 hover:border-black" href="#"
+              <a
+                class="hover:border-b-4 hover:border-black"
+                href="http://localhost:8080/contact.html"
                 >Contact</a
               >
             </li>
