--- a/src/assets/pages/contact/index.html
+++ b/src/assets/pages/contact/index.html
@@ -340,7 +340,7 @@
               <a href="#"
                 ><i class="fa-brands fa-linkedin hover:text-white"></i
               ></a>
-              <a href="#"
+              <a href="https://github.com/Wana-171"
                 ><i class="fa-brands fa-square-github hover:text-white"></i
               ></a>
             </div>
@@ -379,7 +379,7 @@
               <a href="#"
                 ><i class="fa-brands fa-linkedin hover:text-white"></i
               ></a>
-              <a href="#"
+              <a href="https://github.com/Wana-171"
                 ><i class="fa-brands fa-square-github hover:text-white"></i
               ></a>
             </div>
