--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -8,11 +8,8 @@
     <title>Nos services</title>
 </head>
 <body class="bg-gradient-to-r from-red-500 to-pink-400 bg-gradient  bg-cover animate h-screen">
-   <span>
-    <i class="fa-solid fa-headphones text-white h-8 p-1"></i>
-
-   </span>
-  <a class="text-end p-1 text-white" href="http://localhost:8080/index.html">Accueil</a>
+   
+  <a class="text-end p-2 text-white" href="http://localhost:8080/index.html">Accueil</a>
 
     <h1 class="text-center text-white  font-medium text-6xl">
 NOS ABONNEMENT
@@ -20,7 +17,7 @@ NOS ABONNEMENT
     <section class="bg-pink-900 mt-48 inline-block   w-56 h-64  m-2 rounded-md">
         <span>
 
-            <i class="fa-solid fa-record-vinyl text-white"></i>
+            <i class="fa-solid fa-user text-white"></i>
         </span>
 
         <h2 class="text-white p-1" >
@@ -37,7 +34,7 @@ NOS ABONNEMENT
     <section class="bg-pink-900 mt-48 inline-block   w-72 h-64  m-2 rounded-md">
         <span>
 
-            <i class="fa-solid fa-record-vinyl text-white"></i>
+            <i class="fa-solid fa-people-group text-white"></i>
         </span>
 
         <h2 class="text-white p-1" >
@@ -55,7 +52,7 @@ NOS ABONNEMENT
     <section class="bg-pink-900 w-72 h-64 inline-block rounded-md">
         <span>
             
-            <i class="fa-solid fa-record-vinyl text-white"></i>
+            <i class="fa-solid fa-star text-yellow-200"></i>
         </span>
             <h2 class="text-white p-1">
 
