--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -10,7 +10,7 @@
 <body class=" ">
   <header class=" h-96 bg-neutral-50 ">
     <div> 
-      <img src="./assets/img/casque-rose-rouge2.jpg" height="auto" class="object-cover   min-h-screen">
+      <img src="./assets/img/fond-vaste.png" height="auto" class="object-cover   min-h-screen">
       <div class="absolute top-56   ml-1 w-2/4 text-white">
       
           <h1 class="text-start  ">
@@ -46,7 +46,7 @@
     <nav>
       <ul>
         <li class="text-white">
-            <a class="hover:border-b-2" href="http://localhost:8080/index.html"  target="_blank" >contact</a>
+            <a class="hover:border-b-2" href="http://localhost:8080/contact/index.html"  target="_blank" >contact</a>
             <a class="hover:border-b-2" href="http://localhost:8080/services.html"   target="_blank">services</a>
             
           </li>
