--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -6,15 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link href="/dist/output.css" rel="stylesheet">
+  <link rel="stylesheet" href="/dist/queries.css">
+  <link rel="stylesheet" href="../../../src/assets/css/queries.css">
 </head>
 <body>
 
     <div class="xl-text-align md-text-align md-p-4">
       <p class="serif">Bonjour voici notre page d'acceuil de notre agence web.</p>
-      <p class="serif">On va vous présenter brièvement notre agence, notre agence elle à été creé en 2010 à Meaux.</p>
+      <p class="serif">On va vous présenter brièvement notre agence, notre agence elle à été creé en 2022 à Meaux.</p>
       <p class="serif">Le fondateur de l'agence est Warren les co-fondateur Axel, Norman, Alexandre.</p>
       <p class="serif">On à creé cet agence pour aider les personnes pour leur site web puis creer des sites web.</p>
-      <p class="serif">Grâce à notre équipe on peut faire votre site de A à Z. Notre leader dev qui est fullstack les co-fondateurs Back-end, Font-end, Design web.</p>
+      <p class="serif">Grâce à notre équipe on peut faire votre site de A à Z.</p>
+      <p class="serif">Notre leader dev qui est fullstack les co-fondateurs Back-end, Font-end, Design web.</p>
+      <p class="serif">On vas vous présenter notre entreprise et dans quoi elle travail le plus.</p>
+      <p class="serif">Avec les images ci-dessous on peut remarquer qu'on est développeur pour les sites de musiques.</p>
+      <p class="serif">On fait aussi des sites ou du debug de site web.</p>
     </div>
   <div class="sm-flex sm-flex-col sm-justify-evenly md-flex xl-flex xl-justify-around xl-order-1">
     <div class="xl-content-center">
