--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -11,7 +11,7 @@
   <header class=" h-96 bg-neutral-50 ">
     <div> 
       <img src="./assets/img/fond-vaste.png" height="auto" class="object-cover   min-h-screen">
-      <div class="absolute top-56   ml-1 w-2/4 text-white">
+      <div class="absolute top-56   ml-1 w-2/4 text-white  p-1">
       
           <h1 class="text-start  ">
       Bienvenue sur notre site de streaming
