--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -17,7 +17,7 @@ NOS ABONNEMENT
     <section class="bg-pink-900 mt-48 inline-block   w-56 h-64  m-2 rounded-md">
         <span>
 
-            <i class="fa-solid fa-user text-white"></i>
+            <i class="fa-solid fa-user text-white p-1"></i>
         </span>
 
         <h2 class="text-white p-1" >
@@ -31,10 +31,10 @@ NOS ABONNEMENT
         </button>
 
     </section >
-    <section class="bg-pink-900 mt-48 inline-block   w-72 h-64  m-2 rounded-md">
+    <section class="bg-pink-900  inline-block   w-72 h-64  m-2 rounded-md">
         <span>
 
-            <i class="fa-solid fa-people-group text-white"></i>
+            <i class="fa-solid fa-people-group text-white p-1"></i>
         </span>
 
         <h2 class="text-white p-1" >
@@ -43,7 +43,7 @@ NOS ABONNEMENT
         <p class="text-white p-1" >
          Protection de votre site  et de la maintenance  sera renforcé a long terme  et <br> vous pourrais acccueillir plus de visiteurs sur votre site (100k seulement) 
         </p>
-        <button class="bg-white rounded-xl text-pink-900  text-pink- hover:bg-pink-400 hover:text-white  h-9 w-36">
+        <button class=" bg-white rounded-xl text-pink-900  text-pink- hover:bg-pink-400 hover:text-white  h-9 w-36">
             payer
         </button>
 
@@ -52,7 +52,7 @@ NOS ABONNEMENT
     <section class="bg-pink-900 w-72 h-64 inline-block rounded-md">
         <span>
             
-            <i class="fa-solid fa-star text-yellow-200"></i>
+            <i class="fa-solid fa-star text-yellow-200 p-1"></i>
         </span>
             <h2 class="text-white p-1">
 
