--- a/src/assets/pages/contact/index.html
+++ b/src/assets/pages/contact/index.html
@@ -11,7 +11,7 @@
     <!-- nav mod desktop -->
 
     <header class="hidden lg:block">
-      <div class="grid grid-cols-8 bg-pink-400">
+      <div class="grid grid-cols-8 bg-pink-200">
         <div class="flex justify-center">
           <a href="http://localhost:8080/">
             <img
@@ -93,7 +93,7 @@
       </div>
       <div>
         <nav
-          class="bg-pink-400 h-60 text-center flex justify-center items-center text-2xl hidden"
+          class="bg-pink-200 h-60 text-center flex justify-center items-center text-2xl hidden"
           id="menu-home-nav"
         >
           <ul>
@@ -231,7 +231,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="bg-pink-400 mt-10">
+    <footer class="bg-pink-200 mt-10">
       <div class="md:hidden">
         <div class="grid grid-rows-3">
           <div class="flex justify-center items-center">
@@ -337,7 +337,7 @@
           <!--********** SOCIAL LINK ********** -->
           <div class="text-5xl text-center py-10">
             <div>
-              <a href="#"
+              <a href=""
                 ><i class="fa-brands fa-linkedin hover:text-white"></i
               ></a>
               <a href="https://github.com/Wana-171"
@@ -360,7 +360,7 @@
     <!-- ********** Tablet & Desktop ******** -->
     <!-- logo  -->
 
-    <footer class="h-80 w-full bg-pink-400 hidden md:block lg:block">
+    <footer class="h-80 w-full bg-pink-200 hidden md:block lg:block">
       <div class="grid grid-cols-5">
         <div class="grid grid-rows-1 md:mx-4">
           <div class="flex justify-center items-center md:py-4">
