--- a/src/assets/pages/home/index.html
+++ b/src/assets/pages/home/index.html
@@ -131,6 +131,35 @@
         </nav>
       </div>
     </header>
+
+    <div class="grid grid-rows md:grid-cols-3">
+      <div class="flex justify-center">
+        <img
+          src="../../img/img-foule-rouge-rose.jpg"
+          width="320px"
+          height="auto"
+          alt="foule-rouge"
+        />
+      </div>
+
+      <div class="flex justify-center">
+        <img
+          src="../../img/istockphoto-rose2.jpg"
+          width="350px"
+          height="auto"
+          alt=""
+        />
+      </div>
+      <div class="flex justify-center">
+        <img
+          src="../../img/micro-rose.jpg"
+          width="360px"
+          height="auto"
+          alt=""
+        />
+      </div>
+    </div>
+
     <!-- footer -->
     <footer class="bg-pink-400 mt-10">
       <div class="md:hidden">
