--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -177,7 +177,7 @@
     </div>
   </main>
   
-  <div class="grid grid-rows  md:grid-cols-3  justify-center ">
+  <div class="grid grid-rows  md:grid-cols-3  justify-center h-64">
     
     <div class=" flex justify-center">
       <img class="border-8 border-white"
@@ -192,7 +192,6 @@
       src="../../assets/img/micro-rose.jpg" width="350px" height="auto" >
     </div>
   </div>
-  
   </div>
   <!-- footer -->
 <footer class="bg-pink-200 mt-10">
