--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -5,12 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <title>Services</title>
 </head>
 <body>
-    <h1>
-        services
-    </h1>
+   
 
     <link href="/output.css" rel="stylesheet">
     <title>Nos services</title>
