--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -52,7 +52,7 @@
               <li>
                 <a
                   class="hover:border-b-4 hover:border-black"
-                  href="http://localhost:3000/contact.html"
+                  href="http://localhost:8080/contact.html"
                   >Contact</a
                 >
               </li>
@@ -108,7 +108,7 @@
               >
             </li>
             <li class="pt-4">
-              <a class="hover:border-b-4 hover:border-black" href="#"
+              <a class="hover:border-b-4 hover:border-black" href=""
                 >Services</a
               >
             </li>
