--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WANA Agnecy</title>
   <link href="../../assets/css/output.css" rel="stylesheet">
+  <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
 </head>
 <body class=" ">
   <header class="hidden lg:block">
