--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link href="/output.css" rel="stylesheet">
+    <link href="../../assets/css/output.css" rel="stylesheet">
 </head>
 <body class="bg-pink-100">
     <!-- nav mod desktop -->
@@ -30,7 +30,7 @@
           <nav class="text-3xl">
             <ul class="flex">
               <li>
-                <a class="hover:border-b-4 hover:border-black" href="#"
+                <a class="hover:border-b-4 hover:border-black" href="http://localhost:8080/"
                   >Accueil</a
                 >
               </li>
@@ -40,7 +40,7 @@
                 >
               </li>
               <li class="pr-8">
-                <a class="hover:border-b-4 hover:border-black" href="#"
+                <a class="hover:border-b-4 hover:border-black" href="http://localhost:8080/services.html"
                   >Services</a
                 >
               </li>
@@ -98,17 +98,17 @@
         >
           <ul>
             <li>
-              <a class="hover:border-b-4 hover:border-black" href="#"
+              <a class="hover:border-b-4 hover:border-black" href="http://localhost:8080/"
                 >Accueil</a
               >
             </li>
             <li class="pt-4">
-              <a class="hover:border-b-4 hover:border-black" href="#"
+              <a class="hover:border-b-4 hover:border-black" href=""
                 >Streaming</a
               >
             </li>
             <li class="pt-4">
-              <a class="hover:border-b-4 hover:border-black" href=""
+              <a class="hover:border-b-4 hover:border-black" href="http://localhost:8080/Services.html"
                 >Services</a
               >
             </li>
@@ -140,7 +140,7 @@
             <h1 class="text-2xl font-bold">Warren</h1>
             <img
               class="rounded-full pt-6"
-              src="../../img/bitmoji-warren.png"
+              src="../../assets/img/bitmoji-warren.png"
               width="250px"
               height="auto"
               alt="bitmoji-warren"
@@ -157,7 +157,7 @@
             <h1 class="text-2xl font-bold">Norman</h1>
             <img
               class="py-6"
-              src="../../img/bitmoji-norman.png"
+              src="../../assets/img/bitmoji-norman.png"
               width="250px"
               height="auto"
               alt="bitmoji-norman"
@@ -173,7 +173,7 @@
             <h1 class="text-2xl font-bold">Axel</h1>
             <img
               class="py-6"
-              src="../../img/bitmoji-axel.png"
+              src="../../assets/img/bitmoji-axel.png"
               width="250px"
               height="auto"
               alt="bitmoji-axel"
