--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link href="../../assets/css/output.css" rel="stylesheet">
+     <link rel="shortcut icon" href="../../assets/img/logo-wana-agency-web-rougeblanc.ico" type="image/x-icon">
 </head>
 <body class="bg-pink-100">
     <!-- nav mod desktop -->
@@ -13,7 +14,7 @@
     <header class="hidden lg:block">
       <div class="grid grid-cols-8 bg-pink-200">
         <div class="flex justify-center">
-          <a href="http://localhost:8080/">
+          <a href="https://main--wana-agency.netlify.app">
             <img
               class="py-4"
               src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
@@ -30,7 +31,7 @@
           <nav class="text-3xl">
             <ul class="flex">
               <li>
-                <a class="hover:border-b-4 hover:border-black" href="http://localhost:8080/"
+                <a class="hover:border-b-4 hover:border-black" href="https://main--wana-agency.netlify.app"
                   >Accueil</a
                 >
               </li>
@@ -40,7 +41,7 @@
                 >
               </li>
               <li class="pr-8">
-                <a class="hover:border-b-4 hover:border-black" href="http://localhost:8080/services.html"
+                <a class="hover:border-b-4 hover:border-black" href="https://main--wana-agency.netlify.app/services"
                   >Services</a
                 >
               </li>
@@ -52,7 +53,7 @@
               <li>
                 <a
                   class="hover:border-b-4 hover:border-black"
-                  href="http://localhost:8080/contact.html"
+                  href="https://main--wana-agency.netlify.app/contact"
                   >Contact</a
                 >
               </li>
@@ -74,7 +75,7 @@
         </div>
 
         <div class="flex justify-center py-2">
-          <a href="http://localhost:8080/">
+          <a href="https://main--wana-agency.netlify.app">
             <img
               src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
               width="120px"
@@ -98,7 +99,7 @@
         >
           <ul>
             <li>
-              <a class="hover:border-b-4 hover:border-black" href="http://localhost:8080/"
+              <a class="hover:border-b-4 hover:border-black" href="https://main--wana-agency.netlify.app"
                 >Accueil</a
               >
             </li>
@@ -108,7 +109,7 @@
               >
             </li>
             <li class="pt-4">
-              <a class="hover:border-b-4 hover:border-black" href="http://localhost:8080/Services.html"
+              <a class="hover:border-b-4 hover:border-black" href="https://main--wana-agency.netlify.app/services"
                 >Services</a
               >
             </li>
@@ -120,7 +121,7 @@
             <li class="pt-4">
               <a
                 class="hover:border-b-4 hover:border-black"
-                href="http://localhost:3000/contact.html"
+                href="https://main--wana-agency.netlify.app/contact"
                 >Contact</a
               >
             </li>
