--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -6,13 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WANA Agnecy</title>
   <link href="../../assets/css/output.css" rel="stylesheet">
-  <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../../assets/img/logo-wana-agency-web-rougeblanc.ico" type="image/x-icon">
 </head>
 <body class=" ">
   <header class="hidden lg:block">
     <div class="grid grid-cols-8 bg-pink-200">
       <div class="flex justify-center">
-        <a href="http://localhost:8080/">
+        <a href="https://main--wana-agency.netlify.app">
           <img
             class="py-4"
             src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
@@ -29,7 +29,7 @@
         <nav class="text-3xl">
           <ul class="flex">
             <li>
-              <a class="hover:border-b-4 hover:border-black" href="#"
+              <a class="hover:border-b-4 hover:border-black" href="https://main--wana-agency.netlify.app"
                 >Accueil</a
               >
             </li>
@@ -39,7 +39,7 @@
               >
             </li>
             <li class="pr-8">
-              <a class="hover:border-b-4 hover:border-black" href="#"
+              <a class="hover:border-b-4 hover:border-black" href="https://main--wana-agency.netlify.app/services"
                 >Services</a
               >
             </li>
@@ -51,7 +51,7 @@
             <li>
               <a
                 class="hover:border-b-4 hover:border-black"
-                href="http://localhost:8080/contact.html"
+                href="https://main--wana-agency.netlify.app/contact"
                 >Contact</a
               >
             </li>
@@ -73,7 +73,7 @@
       </div>
 
       <div class="flex justify-center py-2">
-        <a href="http://localhost:8080/">
+        <a href="https://main--wana-agency.netlify.app">
           <img
             class="py-4"
             src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
@@ -100,7 +100,7 @@
           <li>
             <a
               class="hover:border-b-4 hover:border-black"
-              href="http://localhost:8080/index.html"
+              href="https://main--wana-agency.netlify.app"
               >Accueil</a
             >
           </li>
@@ -110,7 +110,7 @@
             >
           </li>
           <li class="pt-4">
-            <a class="hover:border-b-4 hover:border-black" href="http://localhost:8080/services.html" target="_blank"
+            <a class="hover:border-b-4 hover:border-black" href="https://main--wana-agency.netlify.app/services" target="_blank"
               >Services</a
             >
           </li>
@@ -122,7 +122,7 @@
           <li class="pt-4">
             <a
               class="hover:border-b-4 hover:border-black"
-              href="http://localhost:8080/contact.html" target="_blank"
+              href="https://main--wana-agency.netlify.app/contact" target="_blank"
               >Contact</a
             >
           </li>
@@ -292,7 +292,7 @@
     <!-- logo -->
     <div class="grid grid-cols-2">
       <div class="flex justify-center items-center py-10">
-        <a href="http://localhost:8080/">
+        <a href="https://main--wana-agency.netlify.app">
           <img
             src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
             width="150px"
@@ -331,7 +331,7 @@
   <div class="grid grid-cols-5">
     <div class="grid grid-rows-1 md:mx-4">
       <div class="flex justify-center items-center md:py-4">
-        <a href="http://localhost:8080/">
+        <a href="https://main--wana-agency.netlify.app">
           <img
             src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
             width="150px"
