--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../assets/css/output.css" rel="stylesheet">
+    <link rel="shortcut icon" href="../../assets/img/logo-wana-agency-web-rougeblanc.ico" type="image/x-icon">
     <title>Services</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
 </head>
 <body class="bg-gradient-to-r from-red-500 to-pink-400 bg-gradient  bg-cover animate h-screen">
    
-  <a class="text-end p-2 text-white" href="http://localhost:8080/index.html">Accueil</a>
+  <a class="text-end p-2 text-white" href="https://main--wana-agency.netlify.app">Accueil</a>
 
     <h1 class="text-center text-white  font-medium text-6xl">
 NOS ABONNEMENT
