--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -137,13 +137,13 @@
       <img src="./assets/img/fond-vaste.png" height="auto" class="object-cover   min-h-screen">
       <div class="absolute top-96  ml-1 w-2/4   p-1 text-white">
         
-        <h1 class="text-start  text-3xl">
+        <h1 class="text-start  text-2xl">
       Bienvenue sur notre site de l'agence WANA
         </h1>
         <br>
         <hr class="w-10/12  ">
         <br>
-        <p class="text-start text-xl">
+        <p class="text-start text-sm">
             Sur notre site nous vous proposons plusieurs service pour réaliser votre site  <br> de vos rêve notre agence a une expertise vaste dans le domaine du développement web .
         </p>
     <!-- <div class="">
