--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -8,11 +8,11 @@
     <link href="../../assets/css/output.css" rel="stylesheet">
     <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
 </head>
-<body class="bg-pink-100">
+<body class="bg-background bg-cover">
     <!-- nav mod desktop -->
 
     <header class="hidden lg:block">
-      <div class="grid grid-cols-8 bg-pink-200">
+      <div class="grid grid-cols-8 ">
         <div class="flex justify-center">
           <a href="https://main--wana-agency.netlify.app">
             <img
