--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -9,9 +9,10 @@
   <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
   
 </head>
-<body class=" ">
-  <header class="hidden lg:block">
-    <div class="grid grid-cols-8 bg-pink-200">
+<body class=" bg-background  h-screen bg-no-repeat  ">
+
+  <header class="hidden lg:block shadow-xl shadow-black">
+    <div class="grid grid-cols-8 ">
       <div class="flex justify-center">
         <a href="https://main--wana-agency.netlify.app">
           <img
@@ -65,7 +66,7 @@
   <!-- mod tablet & mobile -->
 
   <header class="lg:hidden">
-    <div class="grid grid-cols-3 bg-pink-200">
+    <div class="grid grid-cols-3 ">
       <!-- btn menu burger -->
       <div class="flex items-center pl-6">
         <button type="button" id="btn-home-burger">
@@ -132,18 +133,18 @@
     </div>
   </header>
   <!-- branche warren -->
-  <main class=" h-96 bg-neutral-50 ">
-    <div class=""> 
-      <img src="./assets/img/fond-vaste.png" height="auto" class="object-cover   min-h-screen">
-      <div class="absolute top-96  ml-1 w-2/4   p-1 text-white">
+  <main class=" h-96 ">
+    <!-- <div class="">  -->
+      <!-- <img src="./assets/img/fond-vaste.png" height="auto" class="object-cover   min-h-screen">
+      <div class="absolute top-96  ml-1 w-2/4   p-1 text-white"> -->
         
-        <h1 class="text-start  text-2xl">
+        <h1 class="text-center  text-6xl pt-10">
       Bienvenue sur notre site de l'agence WANA
         </h1>
         <br>
-        <hr class="w-10/12  ">
+        <hr >
         <br>
-        <p class="text-start text-sm">
+        <p class="text-center text-4xl">
             Sur notre site nous vous proposons plusieurs service pour réaliser votre site  <br> de vos rêve notre agence a une expertise vaste dans le domaine du développement web .
         </p>
     <!-- <div class="">
@@ -178,7 +179,7 @@
         </div>
     </div>
   </main>
-  <div class="bg-white ">
+  <div class="">
 
     <div class="grid grid-rows  md:grid-cols-3  justify-center ">
       
@@ -328,7 +329,7 @@
 <!-- ********** Tablet & Desktop ******** -->
 <!-- logo  -->
 
-<footer class="h-80 w-full bg-pink-200 hidden md:block lg:block ">
+<footer class="h-80 w-full  hidden md:block lg:block shadow-xl shadow-black bg-background-agency ">
   <div class="grid grid-cols-5">
     <div class="grid grid-rows-1 md:mx-4">
       <div class="flex justify-center items-center md:py-4">
