--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -8,9 +8,9 @@
     <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
     <title>Services</title>
 </head>
-<body>
-    <header class="hidden lg:block">
-        <div class="grid grid-cols-8 bg-pink-200">
+<body class="bg-background-agency2 shadow-xl shadow-black">
+    <header class="hidden lg:block shadow-xl shadow-black">
+        <div class="grid grid-cols-8 ">
           <div class="flex justify-center">
             <a href="https://main--wana-agency.netlify.app">
               <img
@@ -64,7 +64,7 @@
       <!-- mod tablet & mobile -->
   
       <header class="lg:hidden">
-        <div class="grid grid-cols-3 bg-pink-200">
+        <div class="grid grid-cols-3 ">
           <!-- btn menu burger -->
           <div class="flex items-center pl-6">
             <button type="button" id="btn-home-burger">
@@ -92,7 +92,7 @@
         </div>
         <div>
           <nav
-            class="bg-pink-200 h-60 text-center flex justify-center items-center text-2xl hidden"
+            class=" h-60 text-center flex justify-center items-center text-2xl hidden"
             id="menu-home-nav"
           >
             <ul>
@@ -128,11 +128,11 @@
         </div>
       </header>
 </head>
-<body class="bg-gradient-to-r from-red-500 to-pink-400 bg-gradient  bg-cover animate h-screen">
+<body class=" h-screen shadow-xl shadow-black">
    
-  <a class="text-end p-2 text-white" href="https://main--wana-agency.netlify.app">Accueil</a>
+  
 
-    <h1 class="text-center text-white  font-medium text-6xl">
+    <h1 class="text-center text-white  font-medium text-6xl pt-5">
 NOS ABONNEMENT
     </h1>
     <section class="bg-pink-900 mt-48 inline-block   w-56 h-64  m-2 rounded-md">
@@ -189,7 +189,7 @@ NOS ABONNEMENT
            
     </section>
 <!-- footer -->
-<footer class="bg-pink-200 mt-10">
+<footer class=" mt-10 shadow-inner shadow-black">
     <div class="md:hidden">
       <div class="grid grid-rows-3">
         <div class="flex justify-center items-center">
@@ -318,7 +318,7 @@ NOS ABONNEMENT
   <!-- ********** Tablet & Desktop ******** -->
   <!-- logo  -->
 
-  <footer class="h-80 w-full bg-pink-200 hidden md:block lg:block">
+  <footer class="h-80 w-full  hidden md:block lg:block bg-background-agency2 shadow-2xl shadow-black">
     <div class="grid grid-cols-5">
       <div class="grid grid-rows-1 md:mx-4">
         <div class="flex justify-center items-center md:py-4">
